feat(router): update response model
