# internal/router/handler_user.go
@@ -1,15 +1,27 @@
 package router
 
 import (
+	"errors"
+	"net/http"
+	"time"
+
 	"github.com/gin-gonic/gin"
+	"github.com/islu/ASS0720/internal/domain/common"
 	"github.com/islu/ASS0720/internal/usecase"
 )
 
 // @description	User status response
 type UserStatusResponse struct {
-	WalletAddress string `json:"walletAddress" example:"0x1234.."`
-	Points        int    `json:"points" example:"100"`
-	Amount        int64  `json:"amount" example:"100"`
+	TaskName        string    `json:"taskName" example:"Onboarding Task"`
+	TaskDescription string    `json:"taskDescription" example:"The user needs to swap at least 1000u"`
+	TaskStartTime   time.Time `json:"taskStartTime" example:"2024-07-01T00:00:00Z"`
+	TaskEndTime     time.Time `json:"taskEndTime" example:"2024-07-29T00:00:00Z"`
+	WalletAddress   string    `json:"walletAddress" example:"0x1234.."`
+	Points          int       `json:"points" example:"100"`
+	TotalAmount     int64     `json:"totalAmount" example:"100"`
+	Status          string    `json:"status" example:"completed"`
+	CreateTime      time.Time `json:"createTime" example:"2024-07-02T00:00:00Z"`
+	UpdateTime      time.Time `json:"updateTime" example:"2024-07-02T00:00:00Z"`
 } //	@name	UserStatusResponse
 
 // Get user tasks status by address
@@ -21,15 +33,41 @@ type UserStatusResponse struct {
 //	@produce		json
 //	@router			/user/{address}   [get]
 //	@param			address	path		string	true	"Wallet address"
-//	@success		200		{object}	router.UserStatusResponse
+//	@success		200		{object}	[]router.UserStatusResponse
 //	@failure		400
 func GetUserTaskStatus(app *usecase.Application) gin.HandlerFunc {
 
 	return func(c *gin.Context) {
 
-		// TODO: Implement logic
+		address := c.Param("address")
+		if address == "" {
+			respondWithError(c, common.NewError(common.ErrorCodeParameterInvalid, errors.New("address is empty")))
+			return
+		}
 
-		respondWithSuccess(c)
+		tasks, err := app.UserService.GetUserTaskStatus(c, address)
+		if err != nil {
+			err = errors.Join(errors.New("[UserHandler][GetUserTaskStatus] Get user tasks failed"), err)
+			respondWithError(c, common.NewError(common.ErrorCodeInternalProcess, err))
+			return
+		}
+
+		var response []UserStatusResponse
+		for _, task := range tasks {
+			response = append(response, UserStatusResponse{
+				TaskName:        task.TaskName,
+				TaskDescription: task.TaskDescription,
+				TaskStartTime:   task.TaskStartTime,
+				TaskEndTime:     task.TaskEndTime,
+				WalletAddress:   task.WalletAddress,
+				Points:          task.Points,
+				TotalAmount:     task.TotalAmount,
+				Status:          task.Status,
+				CreateTime:      task.CreateTime,
+				UpdateTime:      task.UpdateTime,
+			})
+		}
+		respondWithJSON(c, http.StatusOK, response)
 	}
 }
 
@@ -40,9 +78,20 @@ type UserTasksBody struct {
 
 // @description	User tasks response
 type UserTasksResponse struct {
-	WalletAddress string `json:"walletAddress" example:"0x1234.."`
-	Points        int    `json:"points" example:"100"`
-	Amount        int64  `json:"amount" example:"100"`
+	TaskName        string `json:"taskName" example:"Onboarding Task"`
+	TaskDescription string `json:"taskDescription" example:"The user needs to swap at least 1000u"`
+
+	// TaskStartTime   time.Time `json:"taskStartTime" example:"2024-07-01T00:00:00Z"`
+	// TaskEndTime     time.Time `json:"taskEndTime" example:"2024-07-29T00:00:00Z"`
+	// WalletAddress   string    `json:"walletAddress" example:"0x1234.."`
+
+	Points int `json:"points" example:"100"`
+
+	// TotalAmount     int64     `json:"totalAmount" example:"100"`
+	// Status     string    `json:"status" example:"completed"`
+	// CreateTime time.Time `json:"createTime" example:"2024-07-02T00:00:00Z"`
+
+	UpdateTime time.Time `json:"updateTime" example:"2024-07-02T00:00:00Z"`
 } //	@name	UserTasksResponse
 
 // Get user points history for distributed tasks
@@ -56,12 +105,33 @@ type UserTasksResponse struct {
 //	@param			body	body		router.UserTasksBody	true	"User tasks request body"
 //	@success		200		{object}	[]router.UserTasksResponse
 //	@failure		400
-func GetUserTaskList(app *usecase.Application) gin.HandlerFunc {
+func GetUserPointsHistory(app *usecase.Application) gin.HandlerFunc {
 
 	return func(c *gin.Context) {
 
-		// TODO: Implement logic
+		var body UserTasksBody
+		if err := c.BindJSON(&body); err != nil {
+			err = errors.Join(errors.New("[UserHandler][GetUserPointsHistory] Bind JSON"), err)
+			respondWithError(c, common.NewError(common.ErrorCodeParameterInvalid, err))
+			return
+		}
 
-		respondWithSuccess(c)
+		tasks, err := app.UserService.GetUserPointsHistory(c, body.WalletAddress)
+		if err != nil {
+			err = errors.Join(errors.New("[UserHandler][GetUserPointsHistory] Get user tasks failed"), err)
+			respondWithError(c, common.NewError(common.ErrorCodeInternalProcess, err))
+			return
+		}
+
+		var response []UserTasksResponse
+		for _, task := range tasks {
+			response = append(response, UserTasksResponse{
+				TaskName:        task.TaskName,
+				TaskDescription: task.TaskDescription,
+				Points:          task.Points,
+				UpdateTime:      task.UpdateTime,
+			})
+		}
+		respondWithJSON(c, http.StatusOK, response)
 	}
 }
